refactor: reservationDetailResponseList 변수화 (#35)